syntax = "proto3";

package tendermint.p2p;

import "tendermint/crypto/keys.proto";

option go_package = "github.com/tendermint/tendermint/proto/tendermint/p2p";

message PacketPing {}

message PacketPong {}

message PacketMsg {
  int32 channel_id = 1;
  bool eof = 2;
  bytes data = 3;
}

message Packet {
  oneof sum {
    PacketPing packet_ping = 1;
    PacketPong packet_pong = 2;
    PacketMsg packet_msg = 3;
  }
}

message AuthSigMessage {
  tendermint.crypto.PublicKey pub_key = 1;
  bytes sig = 2;
  bool sei_giga_connection = 3;
}
